<resources>
    <string name="iamutkarshtiwari_github_io_ananas_library_name">Photo Editor</string>
    <string name="iamutkarshtiwari_github_io_ananas_no_images">No image found</string>
    <string name="iamutkarshtiwari_github_io_ananas_images">%d images</string>
    <string name="iamutkarshtiwari_github_io_ananas_done">DONE</string>
    <string name="iamutkarshtiwari_github_io_ananas_apply">APPLY</string>

    <string name="iamutkarshtiwari_github_io_ananas_stickers">Stickers</string>
    <string name="iamutkarshtiwari_github_io_ananas_filter">Filters</string>
    <string name="iamutkarshtiwari_github_io_ananas_crop">Crop</string>
    <string name="iamutkarshtiwari_github_io_ananas_rotate">Rotate</string>
    <string name="iamutkarshtiwari_github_io_ananas_text">Text</string>
    <string name="iamutkarshtiwari_github_io_ananas_brush">Brush</string>
    <string name="iamutkarshtiwari_github_io_ananas_eraser">Eraser</string>
    <string name="iamutkarshtiwari_github_io_ananas_edit">Edit</string>
    <string name="iamutkarshtiwari_github_io_ananas_brightness">Brightness</string>
    <string name="iamutkarshtiwari_github_io_ananas_saturation">Saturation</string>
    <string name="iamutkarshtiwari_github_io_ananas_size">Size</string>
    <string name="iamutkarshtiwari_github_io_ananas_opacity">Opacity</string>

    <string name="materialcolorpicker__errHex">Hex Code Format incorrect</string>
    <string name="materialcolorpicker__btnSelectColor">Select</string>
    <string name="iamutkarshtiwari_github_io_ananas_saving_image">Saving…</string>
    <string name="iamutkarshtiwari_github_io_ananas_input_hint">Input Text …</string>

    <string name="iamutkarshtiwari_github_io_ananas_not_selected">Please choose an image for edit</string>
    <string name="iamutkarshtiwari_github_io_ananas_auto_newline">AutoNewline</string>
    <string name="iamutkarshtiwari_github_io_ananas_save_error">Save error!</string>
    <string name="iamutkarshtiwari_github_io_ananas_load_error">Failed to load the image!</string>
    <string name="iamutkarshtiwari_github_io_ananas_loading">Loading…</string>
    <string name="iamutkarshtiwari_github_io_ananas_pick_a_color">Pick a color</string>

    <string name="iamutkarshtiwari_github_io_ananas_free_size">FREE</string>
    <string name="iamutkarshtiwari_github_io_ananas_fit_image">ORIGINAL</string>
    <string name="iamutkarshtiwari_github_io_ananas_square">SQUARE</string>
    <string name="iamutkarshtiwari_github_io_ananas_ratio3_4">3:4</string>
    <string name="iamutkarshtiwari_github_io_ananas_ratio4_3">4:3</string>
    <string name="iamutkarshtiwari_github_io_ananas_ratio9_16">9:16</string>
    <string name="iamutkarshtiwari_github_io_ananas_ratio16_9">16:9</string>

    <string-array name="iamutkarshtiwari_github_io_ananas_filters">
        <item>Origin</item>
        <item>Soft</item>
        <item>Black</item>
        <item>Classic</item>
        <item>Gorgeous</item>
        <item>Retro</item>
        <item>Grace</item>
        <item>Film</item>
        <item>Memory</item>
        <item>Yogurt</item>
        <item>Fleeting</item>
        <item>Shine</item>
    </string-array>

    <string-array translatable="false" name="iamutkarshtiwari_github_io_ananas_filter_drawable_list">
        <item>filter_1</item>
        <item>filter_2</item>
        <item>filter_3</item>
        <item>filter_4</item>
        <item>filter_5</item>
        <item>filter_6</item>
        <item>filter_7</item>
        <item>filter_8</item>
        <item>filter_9</item>
        <item>filter_10</item>
        <item>filter_11</item>
        <item>filter_12</item>
    </string-array>

    <string-array translatable="false" name="iamutkarshtiwari_github_io_ananas_types">
        <item>type1</item>
        <item>type2</item>
        <item>type3</item>
        <item>type4</item>
        <item>type5</item>
        <item>type6</item>
    </string-array>

    <string-array name="iamutkarshtiwari_github_io_ananas_type_names">
        <item>Type 1</item>
        <item>Type 2</item>
        <item>Type 3</item>
        <item>Type 4</item>
        <item>Type 5</item>
        <item>Type 6</item>
    </string-array>

    <integer-array translatable="false" name="iamutkarshtiwari_github_io_ananas_type_count">
        <item>5</item>
        <item>5</item>
        <item>5</item>
        <item>5</item>
        <item>3</item>
        <item>5</item>
    </integer-array>

    <string name="iamutkarshtiwari_github_io_ananas_more">More</string>
    <string name="iamutkarshtiwari_github_io_ananas_exit_without_save">The edited image is not saved. Do you want to exit? </string>
    <string name="iamutkarshtiwari_github_io_ananas_confirm">Confirm</string>
    <string name="iamutkarshtiwari_github_io_ananas_cancel">Cancel</string>

    <string name="iamutkarshtiwari_github_io_ananas_beauty">Beauty</string>
    <string name="iamutkarshtiwari_github_io_ananas_smooth">Smoothness</string>
    <string name="iamutkarshtiwari_github_io_ananas_white_skin">Skin Tone</string>

    <item type="id" translatable="false" name="iamutkarshtiwari_github_io_ananas_TAG_STICKERS_PATH" />
    <item type="id" translatable="false" name="iamutkarshtiwari_github_io_ananas_TAG_STICKERS_COUNT" />
</resources>